fix popover right aligned

--- a/sass/template-picker.scss
+++ b/sass/template-picker.scss
@@ -712,7 +712,7 @@ $sidebar_width: 290px;
 			.srfm-tp-header-credits-popover {
 				position: absolute;
 				top: 60px;
-				right: 71px;
+				right: 81px;
 				display: flex;
 				flex-direction: column;
 				align-items: center;
